<resources>

    <string name="app_name">Duty</string>
    <string name="hello_world">Hello Duty!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_duty_profile">Duty profile</string>
    <string name="menu_purge_alarms">Purge alarms</string>
    
    <string name="title_activity_main">Duty</string>
    <string name="title_section3">Section 3</string>
    <string name="tab_backups">Backups</string>
    <string name="tab_alarms">Alarms</string>
    <string name="title_activity_duty">Duty</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="read_alerts_title">Read alerts</string>
    <string name="read_alerts_desc">Allows to read duty alerts</string>
    <string name="write_alerts_title">Write alerts</string>
    <string name="write_alerts_desc">Allows to write alerts</string>
    <string name="receive_notifications">Receive notifications</string>
    <string name="notifications_title">Notifications</string>
    <string name="alarm_sound">Alarm</string>
    <string name="backup_sound">Backup</string>
    <string name="quiet_hours_start">Quiet hours start</string>
    <string name="receive_duty_calls">Receive duty calls</string>
    <string name="preferences">Settings</string>
    <string name="preferences_category_sounds">Sounds</string>
    <string name="max_notification_age">Max notification age</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_purge_title">Purge alerts?</string>
    <string name="dialog_purge_message">Do you really want to purge all alerts?</string>
    
    <string name="dialog_receive_calls_title">Recieve duty calls</string>
    <string name="dialog_receive_calls_message">Are you sure you want to receive duty calls?\n\nThis action will send text message "JA" to 640.</string>
    <string name="receive_calls_sent">Text message was sent.</string>
    
    <!-- time range preference -->
    <string name="start_time_title">Start</string>
    <string name="end_time_title">End</string>
    
    <string name="preferences_quiet_hours">Quiet hours</string>
    <string name="quiet_hours_enabled">Enable quiet hours</string>
    <string name="quiet_hours_enabled_on">Quiet hours will be enforced</string>
    <string name="quiet_hours_enabled_off">Notifications will function as normal</string>
    
    <string name="notification_backups_and_alarms">%1$s and %2$s</string>

    <plurals name="max_notification_age_summary">
        <item quantity="one">Keep notifications for 1 day</item>
        <item quantity="few">Keep notifications for %d days</item>
        <item quantity="other">Keep notifications for %d days</item>
    </plurals>

    <plurals name="notification_title_alerts">
        <item quantity="one">Unreaded alert</item>
        <item quantity="other">Unreaded alerts</item>
    </plurals>
    
    <plurals name="notification_text_alarms">
        <item quantity="one">1 alarm</item>
        <item quantity="other">%d alarms</item>
    </plurals>

    <plurals name="notification_text_backups">
        <item quantity="one">1 backup</item>
        <item quantity="other">%d backups</item>
    </plurals>

    
    <plurals name="notification_title_alarms">
        <item quantity="one">1 unreaded alarm</item>
        <item quantity="other">%d unreaded alarms</item>
    </plurals>
        
    <plurals name="notification_title_backups">
        <item quantity="one">1 unreaded backup</item>
        <item quantity="other">%d unreaded backups</item>
    </plurals>
    
</resources>